# mandarin-anki-deck-creator

./: .env_SAMPLE  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: python-general-coding-style.mdc
.github/workflows/: ci.yml
docs/architecture/: web-server-and-integrations-plan.md
src/anki_deck_generator/: __init__.py  cli.py  cli_handlers.py  debuglog.py  errors.py  pipeline.py  pipeline_types.py
src/anki_deck_generator/cli_handlers/: __init__.py  auth.py  common.py  import_command.py  run.py  schedule.py  state.py
src/anki_deck_generator/config/: __init__.py  settings.py  source_sets.py
src/anki_deck_generator/dictionary/: __init__.py  enrich.py  index.py  parser.py  pinyin_normalize.py  source.py
src/anki_deck_generator/export/: __init__.py  base.py  csv_writer.py  exporters.py  file_target.py  sentence_links.py
src/anki_deck_generator/ingest/: __init__.py  docx.py  (+3 more)
tests/: test_cedict_parser.py  test_change_detection.py  test_cli_error_handling.py  test_csv_writer.py  test_dedupe.py  test_enrich.py  test_get_store.py  test_google_drive_provider.py  test_incremental_sync.py  test_ingest_bytes.py  test_integration_framework.py  test_phase2_sentences.py  test_pinyin_normalize.py  test_pipeline_e2e_mocked.py  test_preprocess.py  test_run_pipeline_from_text.py  test_schedule_drive.py  test_script_mode_baseline.py  test_source_resolution.py  test_source_sets_drive_yaml.py  test_sqlite_state_store.py  test_state_records.py  test_sync_report.py
tests/baselines/: cedict_sample.u8  llm_mock.json  record.py  settings.env
(+32 files in other folders)
